Add latex code for line numbers

--- a/scripts/preamble.tex
+++ b/scripts/preamble.tex
@@ -1,5 +1,9 @@
 \usepackage[left]{lineno}
 \linenumbers
+\renewcommand{\linenumberfont}{\normalfont\bfseries\small\color{blue}}
+
+% \usepackage{float}
+% \usepackage{setspace}\doublespacing
 
 \newcommand{\beginsupplement}{
 	\setcounter{figure}{0} 
